--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -61,6 +61,9 @@
         <li class="nav-item ">
           <a class="nav-link" href="/orders">Orders<span class="sr-only">(current)</span></a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/cart">{{request.session.customer}}<span class="sr-only">(current)</span></a>
+        </li>
         <li class="nav-item ">
           <a class="nav-link" href="/logout">Logout<span class="sr-only">(current)</span></a>
         </li>
@@ -82,7 +85,9 @@
     </div>
   </nav>
 
-
+<script>
+  console.log("{{request.session.name}}")
+</script>
     {% block content %}{% endblock %}
 
   <!-- Optional JavaScript -->
